Second day final  commit

--- a/index.html
+++ b/index.html
@@ -10,24 +10,38 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Quicksand:wght@300&family=Roboto+Condensed:ital,wght@1,300&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <title>Sugarcosmetics</title>
 </head>
-<body>
- <div id="top"></div>
 
- <div id="mid"></div>
+<div id="top"></div>
 
- <div id="footer">
-    <div id="footerImage">
-        <img src="https://in.sugarcosmetics.com/Footer_sugar_icon.png" alt="home_image">
-    </div>
-    <div id="social_icon">
-        <a href="https://www.facebook.com/trySUGAR/"><img src="https://in.sugarcosmetics.com/desc-images/facebook.svg" alt="facebook"></a>
-        <a href="https://www.instagram.com/trysugar/?hl=en"><img src="https://in.sugarcosmetics.com/desc-images/Instagram.svg" alt="Instagram"> </a>
-        <a href="https://www.pinterest.com/sugarcosmetics/"><img src="https://in.sugarcosmetics.com/desc-images/Pinterest.svg" alt="Pinterest"></a>
-        <a href="https://sugarcosmetics-blog.tumblr.com/"><img src="https://in.sugarcosmetics.com/desc-images/Tumblr.svg" alt="Tumblr"></a>
-        <a href="https://www.youtube.com/channel/UCKVqnev2idvmUNKc2b91B8g"><img src="https://in.sugarcosmetics.com/desc-images/Youtube.svg" alt="Youtube"></a>
-        <a href="https://twitter.com/trySUGAR"><img src="https://icons-for-free.com/download-icon-twitter+icon-1320191822479576436_512.png" alt="twitter"></a>
-    </div>
+<div id="corousal"></div>
+
+<div class="heading">
+    <h2>REFER YOUR FRIENDS</h2>
 </div>
+<div id="referal">
+    <img src="https://d32baadbbpueqt.cloudfront.net/2db38d62-3b65-418e-8dcb-d67cb3d6edca.jpg" alt="referal-image">
+</div>
+<div class="heading">
+    <h2>METTLE PRIMING BALM</h2>
+</div>
+<div id="videoBox" >
+    <iframe src="https://www.youtube.com/embed/_TTJmiTiiOQ"  frameborder="0"></iframe>
+</div>
+<div class="heading">
+    <h2>BESTSELLERS</h2>
+</div>
+<div id="products">
+    <div id="left_arrow"><img src="https://in.sugarcosmetics.com/less-than.png" alt="Left_arrow"></div>
+    <div id="best"></div>
+    <div id="right_arrow"><img src="https://in.sugarcosmetics.com/greater-than.png" alt=""></div>
+</div>
+<div class="heading">
+    <h2>QUICK BEAUTY TIPS WITH SUGAR</h2>
+</div>
+<div id="corousal2"></div>
+
+
+<div id="end"></div>
     
 </body>
 </html>
