--- a/Login.html
+++ b/Login.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/login.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Quicksand:wght@300&family=Roboto+Condensed:ital,wght@1,300&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
+    <div id="top"></div>
+
+    <div id="mid"></div>
+
+    <div id="end"></div>
+
     
-</body>
 </html>
+<script src="./scripts/login.js" type="module"></script>
