day 3 final commit

--- a/product.html
+++ b/product.html
@@ -19,7 +19,7 @@
             <div>
                 <img src="https://in.sugarcosmetics.com/desc-images/breadcrumb_home.svg" alt="home">
             </div>
-            <div class="slash">/ MAKEUP /</div>
+            <div class="slash">/</div>
             <div id="maindiv"></div>
         </div>
         
